<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/home_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/myexams"
        app:titleCentered="true"
        app:titleTextAppearance="@style/Toolbar.TitleText"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_exam_cardview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar">

        <ImageView
            android:id="@+id/add_exam_image"
            android:layout_width="88dp"
            android:layout_height="113dp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:src="@drawable/add_exam_icon" />

        <TextView
            android:id="@+id/add_exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/add_exam"
            android:textSize="17dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/my_exams_cardview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_exam_cardview"
        android:backgroundTint="@color/light_blue">

        <ImageView
            android:id="@+id/my_exams_image"
            android:layout_width="88dp"
            android:layout_height="113dp"
            android:src="@drawable/my_exams_icon"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"/>

        <TextView
            android:id="@+id/my_exams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_exams"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_gravity="center|bottom"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/my_profile_cardview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_exams_cardview">

        <ImageView
            android:id="@+id/my_profile_image"
            android:layout_width="88dp"
            android:layout_height="113dp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:src="@drawable/my_profile_icon" />

        <TextView
            android:id="@+id/my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/my_profile"
            android:textSize="17dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>